--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "weatherproject",
   "version": "1.0.0",
-  "description": "",
-  "main": "scripts/app.js",
+  "description": "Simple Weather App",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "James Barlow",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.1"
   }
 }
